# GV3-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DemoMain.cpp  GainDemo.cpp  GlobalVST3Engine.cpp  GlobalVST3Engine.h  README.md
.github/: copilot-instructions.md
cmake/: Dependencies.cmake  Options.cmake  README.md
docs/: ARCHITECTURE.md  GAIN_PLUGIN_METER_INTEGRATION.md  MEMORY_ORDERING_FIX.md  METER_BRIDGE_IMPLEMENTATION.md  METER_WIDGET.md  METER_WIDGET_UI_FIXES.md  PARAMETER_SYSTEM_REFACTORING.md  SIMD_INTEGRATION.md  UI_SANDBOX.md  VST3_BUNDLE_FIX.md
plugins/GainPlugin/: GainEntry.cpp  GainRuntimeState.h  GainUI.h
plugins/ui_sandbox/: main.cpp
src/common/: GV3Math.h
src/dsp/: CompressorProcessor.cpp  EqualizerProcessor.cpp  GainProcessor.cpp
src/dsp/simd/: GV3SimdConfig.h  GV3SimdGain.h  GV3SimdMath.h  GV3SimdTypes.h
src/engine/: AudioBlock.cpp  ParameterRegistry.cpp  ParameterRegistry.h  ParameterState.cpp  ParameterState.h  ParameterStore.cpp  PluginFactory.cpp  PluginProcessor.cpp
src/ui/: MeterBridge.cpp  MeterBridge.h  MeterWidget.cpp  MeterWidget.h  NanoVGEditorModel.cpp
src/ui2/core/: InputState.h  Rect.h  ScissorGuard.h  UiContext.h  Widget.h
src/ui2/layout/: LayoutEngine.cpp  LayoutEngine.h
src/ui2/scenes/: GainScene.cpp  GainScene.h
src/ui2/widgets/: KnobWidget.cpp  KnobWidget.h
tests/: SimdTest.cpp
vst3/: GV3ControllerBase.cpp  GV3ControllerBase.h  GV3EditorView.cpp  GV3EditorView.h  GV3Entry.h  GV3ProcessorBase.cpp  GV3ProcessorBase.h
